Fix: Bottom-right image anchor
The image anchor to the bottom right was not visible.  This commit addresses that issue.

--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@ body::after {
   bottom: 0;
   width: 300px;
   height: 350px;
-  background-image: url('/lovable-uploads/cd4dcace-249e-4c7e-87a4-7e7ede8e0c5e.png');
+  background-image: url('/lovable-uploads/9c87b5da-81ea-48bd-803d-2457da7c8930.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom right;
